interactive-star-rating-component-css-only

--- a/interactive-star-rating-component-css-only/index.html
+++ b/interactive-star-rating-component-css-only/index.html
@@ -20,7 +20,7 @@ Works on IE9>, Chrome, Firefox, Safari
 
 <div class="container">
   
-  <h1>Interactive Star Rating Component (CSS Only) <a href="https://twitter.com/AshNolan_" target="blank">created by @AshNolan_</a></h1>
+  <h1>Interactive Star Rating Component (CSS Only) <a href="https://github.com/srinivasthedeveloper" target="blank">created by @srinivasthedeveloper_</a></h1>
   
   <div class="demo">
     <div class="ratingControl">
